# dyneeded

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json  xmake.lua
.github/workflows/: build_and_upload.yml
core/: dynamic_library.cpp  dynamic_library.hpp  prelude.hpp  resolver.cpp  resolver.hpp
core/formats/: elf_executable.cpp  elf_executable.hpp  exe_format.cpp  exe_format.hpp  mach_o_executable.cpp  mach_o_executable.hpp  portable_executable.cpp  portable_executable.hpp
core/print/: print_tree.cpp  print_tree.hpp
core/utils/: version_info.cpp  version_info.hpp
src/: analyse.cpp  analyse.hpp  args.cpp  args.hpp  bible.hpp  main.cpp  tui.cpp  tui.hpp
